Modified speech rate and added ReadMe

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <button type="button" class="btn btn-sec" onclick="stop()">
           Parar
         </button>
+        <button
+          type="button"
+          class="btn btn-primary spd-button set-speed"
+          value="2"
+          id="speed"
+          onclick="doubleSpeed()"
+        >
+          2x
+        </button>
       </div>
     </main>
 
